style: fix <a> not wrap inside <li>

--- a/src/styles/prose.css
+++ b/src/styles/prose.css
@@ -44,6 +44,14 @@
     text-underline-offset: 4px;
   }
 
+  li a {
+    display: inline;
+    width: auto;
+    white-space: normal;
+    overflow-wrap: break-word;
+    word-break: break-all;
+  }
+
   p {
     line-height: 1.75;
     margin-top: 24px;
